--- a/language/btime.pot
+++ b/language/btime.pot
@@ -2,8 +2,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Display Blog Time\n"
-"POT-Creation-Date: 2016-01-26 17:54+0800\n"
-"PO-Revision-Date: 2016-01-26 17:54+0800\n"
+"POT-Creation-Date: 2016-01-28 21:02+0800\n"
+"PO-Revision-Date: 2016-01-28 21:01+0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -19,32 +19,29 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
-#: btime.php:33
-msgid "Blog Time Widget"
+#. Plugin Name of the plugin/theme
+#: btime.php:32
+msgid "Display Blog Time"
 msgstr ""
 
-#: btime.php:36
+#: btime.php:35
 msgid "The widget displays currently set blogtime."
 msgstr ""
 
-#: btime.php:58
-msgid "Date: "
+#: btime.php:55
+msgid "Date:"
 msgstr ""
 
-#: btime.php:59
-msgid "Time: "
+#: btime.php:56
+msgid "Time:"
 msgstr ""
 
-#: btime.php:77
-msgid "New title"
+#: btime.php:74
+msgid "Current Blog Time"
 msgstr ""
 
-#: btime.php:82
+#: btime.php:79
 msgid "Title:"
-msgstr ""
-
-#. Plugin Name of the plugin/theme
-msgid "Display Blog Time"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
@@ -53,7 +50,9 @@ msgid "http://www.erictra.cz"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "Widget displaying blog time"
+msgid ""
+"It's a widget which displays the current blog time. In the format and date "
+"set in your WordPress site's settings."
 msgstr ""
 
 #. Author of the plugin/theme
